2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (prinl, pprinl): New functions.
	(eval_init): Registered as intrinsics.

	* txr.1: Documented.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (obj_init): changing the quote, qquote, unquote
	and splice symbols to be in the regular user package,
	rather than the system package.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Allow the (. expr) syntax to denote expr.

	* eval.h: Declare existing lambda_s extern variable.

	* lib.c (obj_print, obj_pprint): print (lambda sym ...)
	as (lambda (. sym) ...) and (lambda sym) as (lambda (. sym)).

	* txr.1: document it.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	Implemented macrolet.

	* eval.c (macrolet_s): New variable.
	(lookup_mac, expand_macrolet): New static functions.
	(expand): Recognize and expand macrolet form.
	use lookup_mac to resolve macros rather than gethash,
	since we have lexical macros now.
	(eval_init): Intern macrolet symbol.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (bind_macro_params, expand_macro, macroexpand_1, macroexpand):
	Rename mac_env variable to menv for consistency.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>

	Preparation for lexical macros: we need to pass a macro
	environment down through the expander call hierarchy.

	* eval.c (expand_opt_params, expand_params, expand_tree_cases,
	expand_tree_case, expand_forms, val expand_cond_pairs, val
	expand_place, expand_qquote, expand_vars, expand_quasi, expand_op,
	expand_catch_clause, expand_catch, expand): All expanders get new
	parameter, menv. expand_forms and expand handle a nil value of menv.
	(eval_intrinsic): Pass nil macro environment to expand.
	(eval_init): Update intrinsic registration for expand.

	* eval.h (expand, expand_forms): Declarations updated.

	* parser.y (expand_meta): Gets macro env parameter.
	(elem, o_elem, exprs, expr): Pass nil to expand_forms and expand_meta.

2014-02-22  Kaz Kylheku  <kaz@kylheku.com>
